[RESTEASY-1844] Java 9 cleanup, preparation for Java 10+